--- a/Homework3.Rmd
+++ b/Homework3.Rmd
@@ -18,43 +18,189 @@ votes <- read_csv("HW3Data.csv")
 ```
 
 
-Part 1. Linear probability model 
+*Part 1. Linear probability model* 
 1. Create a linear probability model that predicts a respondent’s probability of voting ‘yes’ on the
 ballot based on their age, income, NEP score, the risk reduction offered by the program, and the
 cost of the program to that respondent. Show the model and interpret the regression
 coefficients.
 ```{r}
-probability_yes <- glm(vote ~ age + income + NEP + bid + risk, family = "binomial", data = votes)
+probability_yes <- lm(vote ~ age + income + NEP + bid + risk, data = votes)
 
 summary(probability_yes) 
 
 ```
 
+```{r}
+# name variables for later use
+
+intercept <- probability_yes$coefficients[1]
+
+agetofifty <- probability_yes$coefficients[2]
+
+agetoforty <- probability_yes$coefficients[3]
+
+agetosixty <- probability_yes$coefficients[4]
+
+agetothirty <- probability_yes$coefficients[5]
+
+incomeone_percent <- probability_yes$coefficients[6]
+
+incomepoor <- probability_yes$coefficients[7]
+
+incomerich <- probability_yes$coefficients[8]
+
+incomevery_rich <- probability_yes$coefficients[9]
+
+NEP <- probability_yes$coefficients[10]
+
+bid <- probability_yes$coefficients[11]
+
+risk <- probability_yes$coefficients[12]
+
+
+```
+
+
 2. Based on this regression, what can you say about the value of a single prevented whale death?
 (Hint: Think about how risk reduction for all whales translates into the number of whale deaths
 avoided)
 
-For 100% increase in risk reduction, people are .4% more likely to vote yes
 
-Risk reduction = 100% 
+```{r}
+#take average of each column 
 
-Cost of implementation: $7 million
+avg_vote <- mean(votes$vote) #Average vote is 0.714 (approx 70% chance of voting yes)
+
+avg_NEP <- mean(votes$NEP)
+
+avg_risk <- mean(votes$risk)
+
+avg_bid <- mean(votes$bid)
+
+#20% reduction = 5 avoided deaths
+# 4% risk reduction = 1 avoided death
+#solve for bid for 0% risk reduction and 4% risk reduction (0 deaths to 1 death) and look at the difference
+
+zero <- - (intercept + agetofifty + agetoforty + agetosixty + agetothirty + incomeone_percent + incomepoor + incomerich + incomevery_rich + (NEP *avg_NEP) +(risk*0) - avg_vote)/bid
+
+
+four <- - (intercept + agetofifty + agetoforty + agetosixty + agetothirty + incomeone_percent + incomepoor + incomerich +incomevery_rich + (NEP * avg_NEP) + (risk*4) - avg_vote)/bid
+
+answer <- four - zero
+
+answer
+
+
+```
+
+The value of a single prevented whale death is $2.78  
+
 
 3. Pick three arbitrary respondents. For each of those respondents, estimate their WTP for a VSR
 program offering 60% risk reduction.
 
 Respondent 1: 
-Risk = 20, Bid = 80, Vote = 0, NEP = 15; 
+Risk = 20, Bid = 80, age = agetothirty, income = very_rich, Vote = 0, NEP = 15; 
 
 Repondent 2: 
-Risk = 40, Bid = 100, vote = 1, NEP = 15; 
+Risk = 40, Bid = 100, vote = 1, NEP = 15, age = agetothirty, income = middle; 
  
 Respondent 3: 
-Risk = 80, Bid = 40, vote = 1, NEP = 32;
+Risk = 80, Bid = 40, vote = 1, NEP = 32, age = agetothirty, income = one_percent;
+
+```{r}
+
+#Respondent 1: 
+# Risk = 20, Bid = 80, age = agetothirty, income = very_rich, Vote = 0, NEP = 15; 
+respondent_1 <- (intercept + (agetothirty * 1) + (incomevery_rich *1) + (NEP *15) + (risk * 60) - avg_vote)/bid
+
+#Answer = $228.4732
+
+#Repondent 2: 
+#Risk = 40, Bid = 100, vote = 1, NEP = 15, age = agetothirty, income = middle; 
+respondent_2 <- (intercept + agetothirty + (NEP * 15) + (risk * 60) - avg_vote)/bid
+
+#Answer = $272.2084
+
+#Respondent 3: 
+#Risk = 80, Bid = 40, vote = 1, NEP = 32, age = agetothirty, income = one_percent;
+
+respondent_3 <- (intercept + agetothirty + (NEP * 32) + incomeone_percent + (risk * 60) - 1)/bid
+
+#Answer = $279.205
+
+```
+
+*Respondent 1: $228.4732*
+*Respondent 2: $272.208*
+*Respondent 3: $279.205* 
 
 
 4. Now repeat this process and estimate the mean WTP for a VSR program offering 60% risk
 reduction among Santa Barbara County households.
+
+```{r}
+# mean WTP for 60% 
+
+mean_wtp <- (intercept + agetofifty + (NEP * avg_NEP) + (risk*60) - avg_vote)/-bid
+
+mean_wtp
+
+```
+
+*The mean willingness to pay for a VSR program offering a 60% risk reduction is $64.47* 
+
+
 5. If there are 150,000 households in Santa Barbara County, estimate the total benefit of a VSR
 program to these households.
+
+```{r}
+
+#60% risk reduction = 15 prevented deaths 
+
+#each death is worth $2.78 
+
+benefit <- (2.78 * 15) * 150000
+
+benefit
+
+```
+
+*$6,255,000*
+
 6. Based only on these benefits, do the benefits of the VSR program outweigh the costs?
+
+*The benefits of the VSR program do not outweigh the costs* 
+
+
+When a container ship reduces its speed, it not only reduces the risk of colliding with a whale but also
+emits less carbon per distance traveled. For this reason, the WhaleStrikes Group Project recommended
+enrolling container ships in voluntary carbon trading markets to mitigate fatal whale strikes. Assume
+that for any ship transiting the Santa Barbara Channel, a speed reduction (that results in a 60% risk
+reduction) will cost the shipper $1,000, but will result in 20 fewer tons of CO2 emitted per transit.
+
+7. Suppose the price of a carbon credit is $Z per ton, at what price Z* will the shipping industry
+decide to adopt the VSR for purely self-interested reasons? (Note: if ships voluntarily reduce
+speed, then the $7 million cost (noted above) of implementing the VSR would be avoided)
+
+*1000/20 = $50 per ton in order to make the shipping industry adopt the speed reduction policy* 
+
+
+8. Now suppose the carbon credit price is exactly Z*, so all ships voluntarily reduce speed to
+achieve the 60% risk reduction. Approximately how many whales would be saved by this? What
+would be the social value of allowing ships to enter the carbon trading market?
+
+15 whales would be saved by this 
+
+*Total benefit of 60% risk reduction = $6,255,000* 
+
+Additionally, 20 fewer tons of CO2 will be emitted for each ship that crosses the channel 
+
+Are we given number of ships?
+
+
+
+
+
+
+
