--- a/Homework3.Rmd
+++ b/Homework3.Rmd
@@ -196,7 +196,7 @@ would be the social value of allowing ships to enter the carbon trading market?
 
 Additionally, 20 fewer tons of CO2 will be emitted for each ship that crosses the channel 
 
-Are we given number of ships?
+_Are we given number of ships?_ 
 
 
 
