--- a/Homework3.Rmd
+++ b/Homework3.Rmd
@@ -26,7 +26,7 @@ coefficients.
 ```{r}
 probability_yes <- lm(vote ~ age + income + NEP + bid + risk, data = votes)
 
-summary(probability_yes) 
+summary(probability_yes)
 
 ```
 
@@ -57,9 +57,10 @@ bid <- probability_yes$coefficients[11]
 
 risk <- probability_yes$coefficients[12]
 
-
 ```
 
+Linear probability model that predicting respondent’s probability of voting ‘yes’:
+$Probability(Voting~yes) = `r round(intercept, digits = 3)` + `r round(agetothirty, digits = 3)`(Age~to~thirty) + `r round(agetoforty, digits = 3)`(Age~to~forty) + `r round(agetofifty, digits = 3)`(Age~to~fifty) + `r round(agetosixty, digits = 3)`(Age~to~sixty) + `r round(incomeone_percent, digits = 3)`(Income~one~percent) + `r round(incomerich, digits = 3)`(Income~rich) + `r round(incomevery_rich, digits = 3)`(Income~very~rich) + `r round(NEP, digits = 3)`(NEP) + `r round(bid, digits = 3)`(Bid) + `r round(risk, digits = 3)`(Risk~reduction)$
 
 2. Based on this regression, what can you say about the value of a single prevented whale death?
 (Hint: Think about how risk reduction for all whales translates into the number of whale deaths
